k8strain3/network-网络/ingress-nginx/test/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: external-auth
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://httpbin.org/basic-auth/user/passwd  #配置外部认证服务地址
spec: 
  ingressClassName: nginx
  rules:
  - host: htp.ng.bltest.kutesmart.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: my-nginx 
            port: 
              number: 80
