k8strain3/network-网络/ingress-nginx/test/rewrite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: rewrite
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: rewrite.ng.bltest.kutesmart.cn
    http:
      paths:
      - path: /gateway(/|$)(.*)
        pathType: Prefix
        backend: 
          service:
            name: my-nginx
            port:
              number: 80
